# air-quality-pyspark

./: .gitignore  README.md  pyproject.toml
scripts/: load_data.py
