[tool.poetry]
name = "air-quality"
version = "0.1.0"
description = ""
authors = ["Matheus Hopper Jansen Costa <mhjc@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
flask = "^3.0.3"
kagglehub = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
